# chat-splitter

./: Cargo.toml  README.md
examples/: chat.rs
src/: lib.rs
