[package]
name = "chat-splitter"
version = "0.1.1"
edition = "2021"
license = "MIT"

authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "Never exceed OpenAI's chat models' maximum number of tokens when using the async_openai Rust crate"
keywords = [
  "ai",
  "artificial-intelligence",
  "chat",
  "chatgpt",
  "gpt-4",
  "nlp",
  "openai",
  "split",
  "text",
  "tiktoken",
  "tokenizer",
]
repository = "https://github.com/schneiderfelipe/chat-splitter"
documentation = "https://docs.rs/chat-splitter"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { version = "0.12.2", default-features = false }
indxvec = { version = "1.9.0", default-features = false }
log = { version = "0.4.21", default-features = false }
tiktoken-rs = { version = "0.5.8", default-features = false }

[dev-dependencies]
async-openai = "0.12.2"
tokio = "1.37.0"
